--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "covenus-commander",
-  "version": "1.0.3-rc1",
+  "version": "1.0.4-rc1",
   "description": "Modern, powerful command-line application framework for Node.js using Typescript or ES6, built on Commander and, inspired by Nestjs and Angular",
   "main": "index.js",
   "engines": {
@@ -15,14 +15,14 @@
   "author": "Ayodeji Adesugba <deji.adesugba@covensoft.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/commander": "^2.9.1",
     "array-flatten": "^2.1.1",
     "cli-color": "^1.2.0",
     "commander": "^2.9.0",
-    "iterare": "0.0.8"
-  },
-  "peerDependencies": {
+    "iterare": "0.0.8",
     "reflect-metadata": "^0.1.10"
+  },
+  "devDependencies": {
+    "@types/commander": "^2.9.1"
   },
   "repository": {
     "type": "git",
